<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="message"
            type="com.example.crud.messages.Message" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E4E2E2"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/name_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{message.nameText}"
                        android:textColor="@color/black"
                        tools:text="@string/name" />

                    <TextView
                        android:id="@+id/phone_number_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="2dp"
                        android:text="@{message.phoneNumberText}"
                        android:textColor="@color/black"
                        tools:text="@string/phone_number" />

                </LinearLayout>

                <TextView
                    android:id="@+id/message_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{message.messageText}"
                    android:textColor="@color/black"
                    tools:text="@string/message_text" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/delete_img_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:background="#E4E2E2"
                app:srcCompat="@drawable/ic_baseline_delete_24" />
        </LinearLayout>

    </LinearLayout>
</layout>